improve: implementar secao portfolio

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </header>
       <div class="services">
         <div class="services-card">
-          <img src="./img/icon/activity.png" alt="icone de atividade">
+          <img src="./img/icon/activity.png" class="portfolio-img-1" alt="imagem do portfolio">
           <h3>Grow Your Business</h3>
           <p>We help identify the best ways to improve your business</p>
           <div class="learn-more">
@@ -111,6 +111,58 @@
           <figcaption>Years in Business</figcaption>
         </figure>
         <span>2 yrs</span>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-portfolio">
+    <div class="container">
+      <header>
+        <h1>Our Portfolio</h1>
+        <h2>We provide the Perfect Solution to your business growth</h2>
+      </header>
+      <div class="portfolio">
+        <div class="portfolio-column-1">
+          <div class="portfolio-item">
+            <figure>
+              <img src="./img/portfolio/portfolio-1.png" class="portfolio-img-1" alt="imagem do portfolio">
+              <figcaption>
+                <h3>Digital Marketing Agency Website</h3>
+                <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="portfolio-item">
+            <figure>
+              <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio">
+              <figcaption>
+                <h3>Digital Marketing Agency Website</h3>
+                <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
+              </figcaption>
+            </figure>
+          </div>
+
+        </div>
+        <div class="portfolio-column-2">
+          <div class="portfolio-item">
+            <figure>
+              <img src="./img/portfolio/portfolio-2.png" class="portfolio-img-2" alt="imagem do portfolio">
+              <figcaption>
+                <h3>Digital Marketing Agency Website</h3>
+                <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="portfolio-item">
+            <figure>
+              <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio">
+              <figcaption>
+                <h3>Digital Marketing Agency Website</h3>
+                <p>This is a website for a client who want to achieve their goals and meet their users needs while also increasing their reach. Accross all platforms. This is a website rebrand</p>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
     </div>
   </section>
