improve: implementar secao de testemunho

--- a/index.html
+++ b/index.html
@@ -166,6 +166,43 @@
       </div>
     </div>
   </section>
+
+  <section class="section-testimonial">
+    <div class="container">
+      <header>
+        <div>
+          <h1>Our Portfolio</h1>
+          <h2>See what our customer <br> say about us</h2>
+        </div>
+        <div class="slider-control">
+          <div class="return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></div>
+          <div class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita"></div>
+        </div>
+      </header>
+      <div class="testimonial">
+        <div class="testimonial-card">
+          <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
+          <div class="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="">
+            <div>
+              <h3>Emily Stones</h3>
+              <p>CEO, Marketing Guru</p>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-card">
+          <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
+          <div class="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="">
+            <div>
+              <h3>Emily Stones</h3>
+              <p>CEO, Marketing Guru</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
