improve: implementar footer

--- a/index.html
+++ b/index.html
@@ -203,6 +203,70 @@
       </div>
     </div>
   </section>
+
+  <section class="section-subscribe">
+    <div class="container">
+      <h1>SUBSCRIBE</h1>
+      <h2>Subscribe to get the latest <br> news about us</h2>
+      <p>Please drop your email below to get daily update about what we do</p>
+      <form action="">
+        <label for=""></label>
+        <div class="input-container">
+          <input type="text" placeholder="Enter Your Email Address">
+          <button type="button">Subscribe</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="footer">
+        <div class="footer-column-1">
+          <h1>web logo</h1>
+          <p>Some footer text about the <br> Agency. Just a little description to <br> help people understand you better</p>
+          <div class="social-media">
+            <span class="facebook">
+              <img src="./img/icon/social media/facebook.png" alt="icone facebook">
+            </span>
+            <span class="twitter">
+              <img src="./img/icon/social media/twitter.png" alt="icone twitter">
+            </span>
+            <span class="linkedin">
+              <img src="./img/icon/social media/linkedin.png" alt="icone linkedin">
+            </span>
+            <span class="instagram">
+              <img src="./img/icon/social media/instagram.png" alt="icone instagram">
+            </span>
+          </div>
+        </div>
+        <div class="footer-column-2">
+          <h2>Quick Links</h2>
+          <ul>
+            <li>
+              <a href="#section-services">services</a>
+            </li>
+            <li>
+              <a href="#section-portfolio">portfolio</a>
+            </li>
+            <li>
+              <a href="#section-about">about us</a>
+            </li>
+            <li>
+              <a href="#section-contact">contact us</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-column-3">
+          <h2>address</h2>
+          <address>Design Agency Head Office. <br> Airport Road <br> United Arab Emirate</address>
+        </div>
+      </div>
+      <div class="copyright">
+        Copyright Design Agency 2022
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
