--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li><a href="#">services</a></li>
             <li><a href="#about">about us</a></li>
             <li><a href="#contact">contact us</a></li>
-            <li><a class="button-outline" href="#">login</a></li>
-            <li><a class="button-main" href="#">register</a></li>
+            <li class="button-outline"><a href="#">login</a></li>
+            <li class="button-main"><a href="#">register</a></li>
           </ul>
         </nav>
       </header>
@@ -119,7 +119,7 @@
     <div class="container">
       <header>
         <h1>Our Portfolio</h1>
-        <h2>We provide the Perfect Solution to your business growth</h2>
+        <h2>We provide the Perfect Solution <br> to your business growth</h2>
       </header>
       <div class="portfolio">
         <div class="portfolio-column-1">
@@ -167,7 +167,7 @@
     </div>
   </section>
 
-  <section class="section-testimonial">
+  <!-- <section class="section-testimonial">
     <div class="container">
       <header>
         <div>
@@ -202,9 +202,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <section class="section-subscribe">
+  <!-- <section class="section-subscribe">
     <div class="container">
       <h1>SUBSCRIBE</h1>
       <h2>Subscribe to get the latest <br> news about us</h2>
@@ -217,9 +217,9 @@
         </div>
       </form>
     </div>
-  </section>
+  </section> -->
 
-  <footer>
+  <!-- <footer>
     <div class="container">
       <div class="footer">
         <div class="footer-column-1">
@@ -266,7 +266,7 @@
         Copyright Design Agency 2022
       </div>
     </div>
-  </footer>
+  </footer> --> -->
 </body>
 
 </html>
