fix: refatorando layout responsivo

--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
     </div>
   </section>
 
-  <!-- <section class="section-testimonial">
+  <section class="section-testimonial">
     <div class="container">
       <header>
         <div>
-          <h1>Our Portfolio</h1>
+          <h1>testimonials</h1>
           <h2>See what our customer <br> say about us</h2>
         </div>
         <div class="slider-control">
@@ -200,11 +200,21 @@
             </div>
           </div>
         </div>
+        <div class="testimonial-card">
+          <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
+          <div class="avatar">
+            <img src="./img/avatar/avatar-woman.png" alt="">
+            <div>
+              <h3>Emily Stones</h3>
+              <p>CEO, Marketing Guru</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <!-- <section class="section-subscribe">
+  <section class="section-subscribe">
     <div class="container">
       <h1>SUBSCRIBE</h1>
       <h2>Subscribe to get the latest <br> news about us</h2>
@@ -212,14 +222,14 @@
       <form action="">
         <label for=""></label>
         <div class="input-container">
-          <input type="text" placeholder="Enter Your Email Address">
-          <button type="button">Subscribe</button>
+          <input type="email" placeholder="Enter Your Email Address">
+          <button class="button-subscribe" type="button">Subscribe</button>
         </div>
       </form>
     </div>
-  </section> -->
+  </section>
 
-  <!-- <footer>
+  <footer>
     <div class="container">
       <div class="footer">
         <div class="footer-column-1">
@@ -266,7 +276,7 @@
         Copyright Design Agency 2022
       </div>
     </div>
-  </footer> --> -->
+  </footer>
 </body>
 
 </html>
