fix: refatorar carrousel e implementar meta tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;1,300&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./css/style.css">
-<title>Design Agency</title>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="referrer" content="no-referrer">
+  <meta name="description" content="Business Design.">
+  <meta name="keywords" content="design, solutions, figma, mobile">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+  <link rel="icon" href="./img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="manifest" href="./img/favicon/site.webmanifest">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;1,300&display=swap" rel="stylesheet">
+  <link rel="preload" href="/css/style.css" as="style">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+  <title>Design Agency</title>
 </head>
 
 <body>
@@ -26,22 +41,22 @@
       </header>
 
       <div class="banner-hero">
-        <div class="text-hero">
+        <article class="text-hero">
           <h1>Increase Your Customers Loyalty and Satisfaction</h1>
           <p>We help businesses like yours earn more customers, standout from competitors, make more money</p>
           <button class="button-main">get started</button>
-        </div>
+        </article>
         <img src="./img/banner-hero.png" alt="Banner">
       </div>
     </div>
 
     <div class="tools">
       <div class="container-tools">
-        <img src="./img/business-tools/google.png" alt="" class="tools-items tools-item__google">
-        <img src="./img/business-tools/trello.png" alt="" class="tools-items tools-item__trello">
-        <img src="./img/business-tools/monday.png" alt="" class="tools-items tools-item__monday">
-        <img src="./img/business-tools/notion.png" alt="" class="tools-items tools-item__notion">
-        <img src="./img/business-tools/slack.png" alt="" class="tools-items tools-item__slack">
+        <img src="./img/business-tools/google.png" alt="google" class="tools-items tools-item__google">
+        <img src="./img/business-tools/trello.png" alt="trello" class="tools-items tools-item__trello">
+        <img src="./img/business-tools/monday.png" alt="monday" class="tools-items tools-item__monday">
+        <img src="./img/business-tools/notion.png" alt="notion" class="tools-items tools-item__notion">
+        <img src="./img/business-tools/slack.png" alt="slack" class="tools-items tools-item__slack">
       </div>
       <div class="divider-tools"></div>
     </div>
@@ -175,15 +190,15 @@
           <h2>See what our customer <br> say about us</h2>
         </div>
         <div class="slider-control">
-          <div class="return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></div>
-          <div class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita"></div>
+          <button class="return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></button>
+          <button class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita"></button>
         </div>
       </header>
       <div class="testimonial">
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
@@ -193,7 +208,7 @@
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
@@ -203,7 +218,7 @@
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
-            <img src="./img/avatar/avatar-woman.png" alt="">
+            <img src="./img/avatar/avatar-woman.png" alt="avatar">
             <div>
               <h3>Emily Stones</h3>
               <p>CEO, Marketing Guru</p>
