fix: correcao de tags html

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 
     <div class="tools">
       <div class="container-tools">
-        <img src="./img/business-tools/google.png" alt="google" class="tools-items tools-item__google">
-        <img src="./img/business-tools/trello.png" alt="trello" class="tools-items tools-item__trello">
-        <img src="./img/business-tools/monday.png" alt="monday" class="tools-items tools-item__monday">
-        <img src="./img/business-tools/notion.png" alt="notion" class="tools-items tools-item__notion">
-        <img src="./img/business-tools/slack.png" alt="slack" class="tools-items tools-item__slack">
+        <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google">
+        <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello">
+        <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday">
+        <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion">
+        <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack">
       </div>
       <div class="divider-tools"></div>
     </div>
   </section>
 
-  <section class="section-services">
+  <article class="section-services">
     <div class="container">
       <header>
         <h1>What we do</h1>
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </article>
 
   <section class="section-numbers">
     <div class="container">
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <section class="section-portfolio">
+  <article class="section-portfolio">
     <div class="container">
       <header>
         <h1>Our Portfolio</h1>
@@ -180,7 +180,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </article>
 
   <section class="section-testimonial">
     <div class="container">
@@ -251,18 +251,18 @@
           <h1>web logo</h1>
           <p>Some footer text about the <br> Agency. Just a little description to <br> help people understand you better</p>
           <div class="social-media">
-            <span class="facebook">
+            <a href="https://www.facebook.com/" class="facebook" target="_blank" rel=”noopener noreferer”>
               <img src="./img/icon/social media/facebook.png" alt="icone facebook">
-            </span>
-            <span class="twitter">
+            </a>
+            <a href="https://twitter.com/" class="twitter" target="_blank" rel=”noopener noreferer”>
               <img src="./img/icon/social media/twitter.png" alt="icone twitter">
-            </span>
-            <span class="linkedin">
+            </a>
+            <a href="https://www.linkedin.com/" class="linkedin" target="_blank" rel=”noopener noreferer>
               <img src="./img/icon/social media/linkedin.png" alt="icone linkedin">
-            </span>
-            <span class="instagram">
+            </a>
+            <a href="https://www.instagram.com/" class="instagram" target="_blank" rel=”noopener noreferer”>
               <img src="./img/icon/social media/instagram.png" alt="icone instagram">
-            </span>
+            </a>
           </div>
         </div>
         <div class="footer-column-2">
