--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a href="#">Link 3</a>
               </div>
             </li>
-            <li><a href="#about">about us</a></li>
-            <li><a href="#contact">contact us</a></li>
+            <li><a class="about" href="#about">about us</a></li>
+            <li><a class="contact" href="#contact">contact us</a></li>
             <li><a class="button-outline" href="#">login</a></li>
             <li><a class="button-main register" href="#">register</a></li>
             <li>
@@ -86,7 +86,7 @@
     </div>
   </section>
 
-  <article class="section-services">
+  <main class="section-services">
     <div class="container">
       <header>
         <h1>What we do</h1>
@@ -119,7 +119,7 @@
         </div>
       </div>
     </div>
-  </article>
+  </main>
 
   <section class="section-numbers">
     <div class="container">
