improve: implementar animacoes nas sections e instalar webpack

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
     <link rel="stylesheet" href="./css/style.min.css">
   </noscript>
 
-
   <title>Design Agency</title>
 </head>
 
 <body>
   <section class="section-hero">
     <div class="container">
-      <header>
+      <header data-anime="100" class="fadeInDown">
         <nav>
           <a class="logo" href="#">design<span>agency</span></a>
           <ul class="menu" id="myLinks">
@@ -65,22 +64,22 @@
       </header>
 
       <div class="banner-hero">
-        <article class="text-hero">
+        <article class="text-hero fadeInDown" data-anime="100">
           <h1>Increase Your Customers Loyalty and Satisfaction</h1>
           <p>We help businesses like yours earn more customers, standout from competitors, make more money</p>
           <button class="button-main">get started</button>
         </article>
-        <img src="./img/banner-hero.png" alt="Banner">
+        <img data-anime="100" class="fadeInDown" src="./img/banner-hero.png" alt="Banner">
       </div>
     </div>
 
     <div class="tools">
       <div class="container-tools">
-        <img src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google">
-        <img src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello">
-        <img src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday">
-        <img src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion">
-        <img src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack">
+        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/google.png" alt="icon google" class="tools-items tools-item__google">
+        <img class="fadeInLeft" data-anime="300" src="./img/business-tools/trello.png" alt="icon trello" class="tools-items tools-item__trello">
+        <img class="fadeInDown" data-anime="300" src="./img/business-tools/monday.png" alt="icon monday" class="tools-items tools-item__monday">
+        <img class="fadeInRight" data-anime="300" src="./img/business-tools/notion.png" alt="icon notion" class="tools-items tools-item__notion">
+        <img class="fadeInRight" data-anime="300" src="./img/business-tools/slack.png" alt="icon slack" class="tools-items tools-item__slack">
       </div>
       <div class="divider-tools"></div>
     </div>
@@ -88,33 +87,39 @@
 
   <main class="section-services">
     <div class="container">
-      <header>
+      <header data-anime="100" class="fadeInLeft">
         <h1>What we do</h1>
         <h2>We provide the Perfect Solution to your business growth</h2>
       </header>
       <div class="services">
         <div class="services-card">
-          <img src="./img/icon/activity.png" class="portfolio-img-1" alt="imagem do portfolio">
-          <h3>Grow Your Business</h3>
-          <p>We help identify the best ways to improve your business</p>
+          <div data-anime="100" class="fadeInDown">
+            <img src="./img/icon/activity.png" alt="imagem do portfolio">
+            <h3>Grow Your Business</h3>
+            <p>We help identify the best ways to improve your business</p>
+          </div>
           <div class="learn-more">
-            <a href="#">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
           </div>
         </div>
         <div class="services-card">
-          <img src="./img/icon/heart.png" alt="icone de coração">
-          <h3>Improve brand loyalty</h3>
-          <p>We help identify the best ways to improve your business</p>
+          <div data-anime="100" class="fadeInDown">
+            <img src="./img/icon/heart.png" alt="icone de coração">
+            <h3>Improve brand loyalty</h3>
+            <p>We help identify the best ways to improve your business</p>
+          </div>
           <div class="learn-more">
-            <a href="#">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
           </div>
         </div>
         <div class="services-card">
-          <img src="./img/icon/work.png" alt="icone de mala de trabalho">
-          <h3>Improve Business Model</h3>
-          <p>We help identify the best ways to improve your business</p>
+          <div data-anime="100" class="fadeInDown">
+            <img src="./img/icon/work.png" alt="icone de mala de trabalho">
+            <h3>Improve Business Model</h3>
+            <p>We help identify the best ways to improve your business</p>
+          </div>
           <div class="learn-more">
-            <a href="#">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
           </div>
         </div>
       </div>
@@ -123,28 +128,28 @@
 
   <section class="section-numbers">
     <div class="container">
-      <div class="numbers">
+      <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/project-plan.png" alt="icone de projetos">
           <figcaption>Completed Projects</figcaption>
         </figure>
         <span>100 +</span>
       </div>
-      <div class="numbers">
+      <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/rating.png" alt="icone de avaliação">
           <figcaption>Customer Satisfaction</figcaption>
         </figure>
         <span>20 %</span>
       </div>
-      <div class="numbers">
+      <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/raise.png" alt="icone de aumento">
           <figcaption>Raised by Clients</figcaption>
         </figure>
         <span>$10M</span>
       </div>
-      <div class="numbers">
+      <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/timeline.png" alt="icone de tempo">
           <figcaption>Years in Business</figcaption>
@@ -156,13 +161,13 @@
 
   <article class="section-portfolio">
     <div class="container">
-      <header>
+      <header data-anime="100" class="fadeInLeft">
         <h1>Our Portfolio</h1>
         <h2>We provide the Perfect Solution <br> to your business growth</h2>
       </header>
       <div class="portfolio">
         <div class="portfolio-column-1">
-          <div class="portfolio-item">
+          <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
               <img src="./img/portfolio/portfolio-1.png" class="portfolio-img-1" alt="imagem do portfolio">
               <figcaption>
@@ -171,7 +176,7 @@
               </figcaption>
             </figure>
           </div>
-          <div class="portfolio-item">
+          <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
               <img src="./img/portfolio/portfolio-3.png" class="portfolio-img-3" alt="imagem do portfolio">
               <figcaption>
@@ -183,7 +188,7 @@
 
         </div>
         <div class="portfolio-column-2">
-          <div class="portfolio-item">
+          <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
               <img src="./img/portfolio/portfolio-2.png" class="portfolio-img-2" alt="imagem do portfolio">
               <figcaption>
@@ -192,7 +197,7 @@
               </figcaption>
             </figure>
           </div>
-          <div class="portfolio-item">
+          <div class="portfolio-item fadeInDown" data-anime="100">
             <figure>
               <img src="./img/portfolio/portfolio-4.png" class="portfolio-img-4" alt="imagem do portfolio">
               <figcaption>
@@ -209,16 +214,16 @@
   <section class="section-testimonial">
     <div class="container">
       <header>
-        <div>
+        <div data-anime="100" class="fadeInLeft">
           <h1>testimonials</h1>
           <h2>See what our customer <br> say about us</h2>
         </div>
-        <div class="slider-control">
-          <button class="return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></button>
+        <div class="slider-control fadeInRight" data-anime="100">
+          <button class=" return"><img src="./img/icon/arrow-left-bold.png" alt="icone controle esquerda"></button>
           <button class="advance"><img src="./img/icon/arrow-right-bold.png" alt="icone controle direita"></button>
         </div>
       </header>
-      <div class="testimonial">
+      <div class="testimonial fadeInRight" data-anime="300">
         <div class="testimonial-card">
           <p>Thank You for your service. I am very pleased with the result. I have seen exponencial growth in my business and its all thanks to your amazing service</p>
           <div class="avatar">
@@ -255,10 +260,13 @@
 
   <section class="section-subscribe">
     <div class="container">
-      <h1>SUBSCRIBE</h1>
-      <h2>Subscribe to get the latest <br> news about us</h2>
-      <p>Please drop your email below to get daily update about what we do</p>
-      <form action="">
+      <div data-anime="200" class="fadeInDown">
+        <h1>SUBSCRIBE</h1>
+        <h2>Subscribe to get the latest <br> news about us</h2>
+        <p>Please drop your email below to get daily update about what we do</p>
+      </div>
+
+      <form action="" data-anime="200" class="fadeInUp">
         <label for=""></label>
         <div class="input-container">
           <input type="email" placeholder="Enter Your Email Address">
@@ -272,26 +280,29 @@
     <div class="container">
       <div class="footer">
         <div class="footer-column-1">
-          <h1>web logo</h1>
-          <p>Some footer text about the <br> Agency. Just a little description to <br> help people understand you better</p>
-          <div class="social-media">
-            <a href="https://www.facebook.com/" class="facebook" target="_blank" rel=”noopener noreferer”>
-              <img src="./img/icon/social media/facebook.png" alt="icone facebook">
-            </a>
-            <a href="https://twitter.com/" class="twitter" target="_blank" rel=”noopener noreferer”>
-              <img src="./img/icon/social media/twitter.png" alt="icone twitter">
-            </a>
-            <a href="https://www.linkedin.com/" class="linkedin" target="_blank" rel=”noopener noreferer>
-              <img src="./img/icon/social media/linkedin.png" alt="icone linkedin">
-            </a>
-            <a href="https://www.instagram.com/" class="instagram" target="_blank" rel=”noopener noreferer”>
-              <img src="./img/icon/social media/instagram.png" alt="icone instagram">
-            </a>
+          <h1 data-anime="200" class="fadeInLeft">web logo</h1>
+          <div data-anime="100" class="fadeInDown">
+            <p>Some footer text about the <br> Agency. Just a little description to <br> help people understand you better</p>
+            <div class="social-media">
+              <a href="https://www.facebook.com/" class="facebook" target="_blank" rel=”noopener noreferer”>
+                <img src="./img/icon/social media/facebook.png" alt="icone facebook">
+              </a>
+              <a href="https://twitter.com/" class="twitter" target="_blank" rel=”noopener noreferer”>
+                <img src="./img/icon/social media/twitter.png" alt="icone twitter">
+              </a>
+              <a href="https://www.linkedin.com/" class="linkedin" target="_blank" rel=”noopener noreferer>
+                <img src="./img/icon/social media/linkedin.png" alt="icone linkedin">
+              </a>
+              <a href="https://www.instagram.com/" class="instagram" target="_blank" rel=”noopener noreferer”>
+                <img src="./img/icon/social media/instagram.png" alt="icone instagram">
+              </a>
+            </div>
           </div>
+
         </div>
         <div class="footer-column-2">
-          <h2>Quick Links</h2>
-          <ul>
+          <h2 data-anime="200" class="fadeInLeft">Quick Links</h2>
+          <ul data-anime="100" class="fadeInDown">
             <li>
               <a href="#section-services">services</a>
             </li>
@@ -307,8 +318,8 @@
           </ul>
         </div>
         <div class="footer-column-3">
-          <h2>address</h2>
-          <address>Design Agency Head Office. <br> Airport Road <br> United Arab Emirate</address>
+          <h2 data-anime="200" class="fadeInLeft">address</h2>
+          <address data-anime="100" class="fadeInDown">Design Agency Head Office. <br> Airport Road <br> United Arab Emirate</address>
         </div>
       </div>
       <div class="copyright">
@@ -316,6 +327,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 
   <script>
     /* Open */
