fix: corrigir hover do botao learn more da secao services

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>We help identify the best ways to improve your business</p>
           </div>
           <div class="learn-more">
-            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more &#129106;</a>
           </div>
         </div>
         <div class="services-card">
@@ -109,7 +109,7 @@
             <p>We help identify the best ways to improve your business</p>
           </div>
           <div class="learn-more">
-            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more &#129106;</a>
           </div>
         </div>
         <div class="services-card">
@@ -119,7 +119,7 @@
             <p>We help identify the best ways to improve your business</p>
           </div>
           <div class="learn-more">
-            <a href="#" data-anime="100" class="fadeInLeft">learn more</a>
+            <a href="#" data-anime="100" class="fadeInLeft">learn more &#129106;</a>
           </div>
         </div>
       </div>
