improve: animar secao numbers

--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
           <img src="./img/icon/project-plan.png" alt="icone de projetos">
           <figcaption>Completed Projects</figcaption>
         </figure>
-        <span>100 +</span>
+        <div><span class="number">100</span> +</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/rating.png" alt="icone de avaliação">
           <figcaption>Customer Satisfaction</figcaption>
         </figure>
-        <span>20 %</span>
+        <div><span class="number">80</span> %</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/raise.png" alt="icone de aumento">
           <figcaption>Raised by Clients</figcaption>
         </figure>
-        <span>$10M</span>
+        <div>$ <span class="number">10</span>M</div>
       </div>
       <div class="numbers fadeInDown" data-anime="100">
         <figure>
           <img src="./img/icon/timeline.png" alt="icone de tempo">
           <figcaption>Years in Business</figcaption>
         </figure>
-        <span>2 yrs</span>
+        <div><span class="number">14 </span> yrs</div>
       </div>
     </div>
   </section>
@@ -329,7 +329,7 @@
   </footer>
 
   <script src="./js/simple-anime.js"></script>
-  <script src="./js/script.js"></script>
+  <script type="module" src="./js/script.js"></script>
 
   <script>
     /* Open */
