--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a class="button-outline" href="#">login</a></li>
             <li><a class="button-main register" href="#">register</a></li>
             <li>
-              <div id="myNav" class="overlay">
+              <div id="navMobile" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
                   <a href="#">Services</a>
@@ -328,20 +328,7 @@
     </div>
   </footer>
 
-  <script src="./js/simple-anime.js"></script>
   <script type="module" src="./js/script.js"></script>
-
-  <script>
-    /* Open */
-    function openNav() {
-      document.getElementById("myNav").style.height = "100%";
-    }
-
-    /* Close */
-    function closeNav() {
-      document.getElementById("myNav").style.height = "0%";
-    }
-  </script>
 </body>
 
 </html>
