--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="manifest" href="./img/favicon/site.webmanifest">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="preload" href="./dist/style.css" as="style" onload="this.rel='stylesheet'">
   <!-- Fallback caso o preload falhe (opcional, mas recomendado para compatibilidade) -->
   <noscript>
-    <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="stylesheet" href="./dist/style.css">
   </noscript>
 
   <title>Design Agency</title>
@@ -328,7 +328,7 @@
     </div>
   </footer>
 
-  <script type="module" src="./js/script.js"></script>
+  <script type="module" src="./dist/bundle.js"></script>
 </body>
 
 </html>
